--- a/desktop.ini
+++ b/desktop.ini
@@ -1,2 +1,4 @@
 [LocalizedFileNames]
 Screenshot 2025-09-20 185712.png=@Screenshot 2025-09-20 185712,0
+Screenshot 2025-09-22 235207.png=@Screenshot 2025-09-22 235207,0
+Screenshot 2025-09-19 161123.png=@Screenshot 2025-09-19 161123,0
